fix OfferLinks jumping

--- a/src/components/OfferLinks/offer-links.module.scss
+++ b/src/components/OfferLinks/offer-links.module.scss
@@ -1,7 +1,9 @@
-.link {
-	margin-right: 39px;
-}
-
 .block {
 	display: flex;
+	gap: 39px;
+}
+
+.img {
+	width: 540px;
+	height: 190px;
 }
